# HackAgentsBIU2026---StudyGuard

./: .gitignore  README.md  app.py  database.Py  database.py  messages_db.json  messages_db.py  pyproject.toml  requirements.txt  run-all.ps1  testForDataBase.py  test_tools.py
Tools/: CameraCheck.py  Speak.py
src/agent_skeleton/: __init__.py  agent.py  server.py
src/agent_skeleton/tools/: get_biu_assignment_tasks.py  get_current_chrome_metadata.py  tts.py
src/agent_skeleton/tools/browser/: close_tab.py  filter.py  get_current_chrome_metadata.py  open_tab.py  start_managed_browser.py
src/ui/: index.html  package-lock.json  package.json
src/ui/src/: App.vue
src/ui/src/components/: Header.vue  calendar.vue  chat.vue
src/ui/src/pages/: index.vue
src/ui/src/router/: index.js
